@@ -1,5 +1,5 @@
 #
-# $Id: minisvc.in,v 1.23 2021-07-24 18:11:54+05:30 Cprogrammer Exp mbhangui $
+# $Id: minisvc.in,v 1.24 2021-07-24 19:23:15+05:30 Cprogrammer Exp mbhangui $
 #
 
 #
@@ -11,7 +11,7 @@ shareddir=@shareddir@
 LOGDIR=@logdir@
 libexecdir=@libexecdir@
 host=@HOST@
-RCSID="# \$Id: minisvc.in,v 1.23 2021-07-24 18:11:54+05:30 Cprogrammer Exp mbhangui $"
+RCSID="# \$Id: minisvc.in,v 1.24 2021-07-24 19:23:15+05:30 Cprogrammer Exp mbhangui $"
 
 #
 # End of User Configuration
@@ -305,6 +305,22 @@ else
      > $conf_dir/UNSHARE
 fi
 
+if [ -x /usr/bin/mount ] ; then
+	mount=/usr/bin/mount
+elif [ -x /bin/mount ] ; then
+	mount=/bin/mount
+else
+	echo "mount command not found" 1>&2
+	return 1
+fi
+if [ -x /usr/bin/umount ] ; then
+	umount=/usr/binu/mount
+elif [ -x /bin/umount ] ; then
+	umount=/bin/umount
+else
+	echo "mount command not found" 1>&2
+	return 1
+fi
 /bin/mkdir -p "$DESTDIR"$SERVICEDIR/.svscan/log
 /bin/mkdir -p "$DESTDIR"$sysconfdir
 if [ $mount_resolvconf -eq 1 ] ; then
@@ -313,8 +329,8 @@ if [ $mount_resolvconf -eq 1 ] ; then
 	dump_run_header
 	echo "echo svscan \$PPID initialization PID \$\$"
 	echo "exec 2>&1"
-	echo "/usr/bin/mount --bind $sysconfdir/resolv.conf /etc/resolv.conf"
-	echo "/usr/bin/mount -l"
+	echo "$mount --bind $sysconfdir/resolv.conf /etc/resolv.conf"
+	echo "$mount -l"
 	) > "$DESTDIR"$SERVICEDIR/.svscan/run
 	(
 	echo "# $prog_args"
@@ -408,10 +424,10 @@ if [ $mount_resolvconf -eq 1 -a \
 	echo "	list=\`grep nameserver /etc/resolv.conf\` > /dev/null"
 	echo "	if [ \$? -eq 0 ] ; then"
 	echo "		echo \$list"
-	echo "		echo \"/usr/bin/umount /etc/resolv.conf\""
-	echo "		/usr/bin/umount /etc/resolv.conf"
-	echo "		echo \"/usr/bin/mount --bind /etc/indimail/resolv.conf /etc/resolv.conf\""
-	echo "		/usr/bin/mount --bind /etc/indimail/resolv.conf /etc/resolv.conf"
+	echo "		echo \"$umount /etc/resolv.conf\""
+	echo "		$umount /etc/resolv.conf"
+	echo "		echo \"$mount --bind $sysconfdir/resolv.conf /etc/resolv.conf\""
+	echo "		$mount --bind $sysconfdir/resolv.conf /etc/resolv.conf"
 	echo "	fi"
 	echo "done"
 	echo ") &"
@@ -2464,6 +2480,9 @@ fi
 exit 0
 #
 # $Log: minisvc.in,v $
+# Revision 1.24  2021-07-24 19:23:15+05:30  Cprogrammer
+# removed hardcoding of mount and umount
+#
 # Revision 1.23  2021-07-24 18:11:54+05:30  Cprogrammer
 # added --config for users rmusers inittab
 # added --resolvconf option
