@@ -92,6 +92,7 @@ o envdir: complete re-code. Added -c option to clear, -i option to ignore
 29. minisvc: added option to add qmaill user and nofile group
 - 24/07/2021
 30. minisvc: added --enable-service, --disable-service and --config=inittab
+31. minisvc: removed hardcoding of mount, umount
 
 * Sunday 14 February 2021 07:46:33 PM IST
 Release 1.0 Start 09/10/2020
